test/error/union_array_empty.gw
union
{
  int array[4];
};
